# otus-cpp-basic-hw

./: CMakeLists.txt  README.md
hw_5/: CMakeLists.txt  istatistics.h  max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  statistics.cpp  stddeviation.cpp  stddeviation.h
hw_6/: CMakeLists.txt  main.cpp  mylist.cpp  mylist.h  sequentialcontainer.cpp  sequentialcontainer.h
