cmake_minimum_required(VERSION 3.25)

add_executable(random_shuffle random_shuffle.cpp)
set_target_properties(random_shuffle PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)

add_executable(chrono_example chrono_example.cpp)
set_target_properties(chrono_example PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)

add_executable(statistics statistics.cpp
    istatistics.h
    min.h min.cpp
    max.h max.cpp)
set_target_properties(statistics PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)

